--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,9 +6,16 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/resto_scheduler
 spring.datasource.username=postgres
 spring.datasource.password=@1Diamant3Mor@le5
 
-spring.jpa.hibernate.ddl-auto=update
+# JPA may NOT mutate schema now; Flyway owns schema changes
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 spring.jpa.show-sql=true
 
-# Thymeleaf
+# --- Flyway ---
+spring.flyway.enabled=true
+spring.flyway.baseline-on-migrate=true
+spring.flyway.baseline-version=1
+spring.flyway.locations=classpath:db/migration
+
+# Thymeleaf (dev)
 spring.thymeleaf.cache=false
